src/test/ui/parser/unbalanced-doublequote.stderr
error: unterminated double quote string
  --> $DIR/unbalanced-doublequote.rs:8:5
   |
LL | /     "
LL | | }
   | |__^

error: aborting due to previous error

